Colaboratory를 통해 생성됨

--- a/programming.ipynb
+++ b/programming.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0310수업필기.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNcx4eDsQQPK8o692aWZPC+",
+      "authorship_tag": "ABX9TyP8qSb53m7Rr5/YPQ6eA4qa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,23 +86,15 @@
         "\r\n",
         "###문법 = 제어문\r\n",
         "\r\n",
-        "1. 반복 : for\r\n",
+        "### 1. 반복 : for\r\n",
         "\r\n",
         "ex) for 100\r\n",
         "\r\n",
         "print(1)\r\n",
         "\r\n",
         "1을 100번 print하라. -> 반복하게 해 줌\r\n",
-        "\r\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TOqmMdamkNRR"
-      },
-      "source": [
-        "2. 조건 : if\r\n",
+        "\r\n",
+        "### 2. 조건 : if\r\n",
         "\r\n",
         "ex) a=1\r\n",
         "\r\n",
@@ -112,16 +104,9 @@
         "\r\n",
         "if a==2\r\n",
         "\r\n",
-        "print(3) -> 실행 안 됨"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VoQaWk4IkXCw"
-      },
-      "source": [
-        "3. 함수 : 입출력 관계\r\n",
+        "print(3) -> 실행 안 됨\r\n",
+        "\r\n",
+        "### 3. 함수 : 입출력 관계\r\n",
         "\r\n",
         "input ---(변화 = function)---> output\r\n",
         "\r\n",
@@ -141,7 +126,7 @@
         "\r\n",
         "자동차의 브레이크를 밟음(input) -> 중간함수 -> 자동차가 멈춤(output)\r\n",
         "\r\n",
-        "사람의 목소리 (input) -> 인공지능 프로그래밍(중간함수) -> 음성인식(output)\r\n"
+        "사람의 목소리 (input) -> 인공지능 프로그래밍(중간함수) -> 음성인식(output)"
       ]
     },
     {
