Colaboratory를 통해 생성됨

--- a/programming.ipynb
+++ b/programming.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "0310수업필기.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8qSb53m7Rr5/YPQ6eA4qa",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPgBshdIL8DHMkYT+4AxxAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,13 +64,29 @@
         "id": "UfVpEp-7i0Nf"
       },
       "source": [
-        "a = 1\r\n",
+        "변수 = 내용\r\n",
+        "\r\n",
+        "a = 1  (숫자)\r\n",
         "\r\n",
         "b = 3\r\n",
         "\r\n",
-        "c = 'love'\r\n",
+        "c = 'love'  (문자)\r\n",
         "\r\n",
-        "변수 = 내용"
+        "d = '123'  (문자)\r\n",
+        "\r\n",
+        "e = [1, 2, 3] (list)\r\n",
+        "\r\n",
+        "e = (1, 2, 3)  (튜플) ... list보다 보안에 좋아서 사용함. 하지만 list와 완전 똑같다고 생각하면 됨\r\n",
+        "\r\n",
+        "f = ['love', 'and']\r\n",
+        "\r\n",
+        "g = [1, 5, 'in'] 숫자 문자 섞어서 list에 포함시키는 것도 가능\r\n",
+        "\r\n",
+        "a = {학생1:165, 학생2:170, 학생3:182} (딕셔너리)\r\n",
+        "\r\n",
+        "b = {사원1:01012345678, 사원2:01098765432}\r\n",
+        "\r\n",
+        "a = {사과:과일중맛있는것, 바나나:열대과일, 사랑:사람이느끼는감정}"
       ]
     },
     {
@@ -164,17 +181,6 @@
         "function add(a,b) -> a+b=c를 출력해라\r\n",
         "\r\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oZFRsuJnoOcl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
