--- a/variables.ipynb
+++ b/variables.ipynb
@@ -59,6 +59,55 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mH-gKJ_LREnA",
+        "outputId": "e7dd2587-7861-4119-8f4a-ce3ee4eeb407",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = 1\r\n",
+        "b = 2\r\n",
+        "c = 3\r\n",
+        "print(a)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t9jYUb5TSUx_",
+        "outputId": "799b8548-ab2c-48e4-8373-51a147f5c3bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = 1; a = float(a); print(type(a))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'float'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -219,6 +268,74 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4V6HOrf9T5h4"
+      },
+      "source": [
+        "a = [1,2,3,4]\r\n",
+        "a = ['ab', 'cde', 'jky']\r\n",
+        "a = [1, 'cde', 4]\r\n",
+        "a = [1, 'cde', [1,3]]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cJhPYcy0UfyT",
+        "outputId": "445b8e6b-01b0-404b-ed6a-9b28c442c29f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = [1, 2, 3]\r\n",
+        "type(a)\r\n",
+        "a[2]"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Kuq8mMJU5M9",
+        "outputId": "7f808543-4664-4f54-806f-1988732cb85d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = [1,'2', [3, '4']]\r\n",
+        "print(a[2])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3, '4']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "DfS-gknCRheL",
         "outputId": "0cf2a3dd-678f-47ab-b4d6-c62e43e428e5"
       },
@@ -266,14 +383,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "2sivfloGRheM",
-        "outputId": "5c768bb7-e02b-4c87-a76e-3e992cdb244e"
+        "outputId": "50836319-0394-47a5-833b-1bc6b7f10faf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "a =\t{\"a\": \"apple\", \"b\": \"orange\", \"c\": 2014}\n",
+        "a =\t{'a': 'apple', 'b': 'orange', 'c': 2014}\n",
         "print(type(a))\n",
-        "print(a[\"a\"])"
+        "print(a['a'])"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,6 +402,36 @@
             "apple\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IFDVOvOsXDzT",
+        "outputId": "5cba1889-0b97-4c4b-990a-7d1497bb8b5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a =\t{'a': 'apple', 'b': 'orange', 'c': 2014}\r\n",
+        "a['c'] = 2021\r\n",
+        "a"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 'apple', 'b': 'orange', 'c': 2021}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     },
