Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -63,6 +63,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ctbNnhVQYChl"
+      },
+      "source": [
+        "s = 'abcdef'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6gW7LcAjurKe",
         "outputId": "470ab62e-551e-4682-e421-4ceb10ae572f"
       },
@@ -162,25 +173,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "NH4kiUqBurKg",
-        "outputId": "c03bfd55-2655-4b3d-f437-6abd57d1ccc3"
+        "outputId": "e077631e-dee4-4ac4-bff9-8f576274db97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "s = ' this is a house built this year.\\n' \t\n",
-        "s"
+        "s = ' this is a house built this year.\\nins''t it' \t\n",
+        "print(s)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' this is a house built this year.\\n'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
+          "output_type": "stream",
+          "text": [
+            " this is a house built this year.\n",
+            "inst it\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
