--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -65,14 +65,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "XSJxLJVCSLAW",
-        "outputId": "921b10b7-3bc8-4345-a6b2-16253a900c95"
+        "outputId": "9041cdc1-25b2-4c75-9546-ccb41e6e23ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = [1, 2, 3, 4]\n",
         "for i in range(len(a)):\n",
         "    print(a[i])"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
