Colaboratory를 통해 생성됨

--- a/20210322.ipynb
+++ b/20210322.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20210322.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNChyDdA5A/KahPV6RymF4d",
+      "authorship_tag": "ABX9TyM8W29k6DDpj9nnQqirfpK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,11 +33,11 @@
         "id": "E44RKDeiXCoa"
       },
       "source": [
-        "def add(x,y):\n",
-        "  y==x**2\n",
-        "  return x*y"
+        "def func2(x, a, b, c):\n",
+        "  y = a*x**2 + b*x + c\n",
+        "  return y"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -47,19 +47,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "voPxCbW0YVk0",
-        "outputId": "f1cdf1cb-3b3c-4177-ff24-ead321fcfa69"
+        "outputId": "ac4b4279-15a8-4f1e-f29d-d683e2da76eb"
       },
       "source": [
-        "print(add(1,2))"
+        "func2(5, 1, -2, 3)"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "2\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     },
