Colaboratory를 통해 생성됨

--- a/0510필기(sound).ipynb
+++ b/0510필기(sound).ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.1"
     },
     "colab": {
-      "name": "sound.ipynb",
+      "name": "0510필기(sound).ipynb",
       "provenance": [],
       "include_colab_link": true
     }
@@ -48,7 +48,7 @@
         "import numpy as np\n",
         "from scipy.signal import lfilter"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
         "\n",
         "  return s, t, theta"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -447,7 +447,7 @@
         "\n",
         "  return c, t, theta"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -504,9 +504,9 @@
         "id": "jDtq5CfDWcU6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 336
         },
-        "outputId": "d5d9a7a4-f62d-48e4-ac32-1fcd0291ea72"
+        "outputId": "79199996-1d22-496c-ab56-777469616053"
       },
       "source": [
         "# parameter setting\n",
@@ -515,12 +515,12 @@
         "dur = 0.5\n",
         "\n",
         "F0 = 100\n",
-        "Fend = int(sr/2)  \n",
+        "Fend = int(sr/2)     # Nyquist frequency : 표현할 수 있는 최대치는 sampling rate의 반절. 만약에 돌고래가 100,000Hz의 소리를 낸다면 그것을 표현하기 위해서는 sampling rate이 200,000Hz이 되어야 함. \n",
         "\n",
         "s_all = 0\n",
-        "for freq in range(F0, Fend+1, F0):\n",
-        "  s, t, theta = phasor_sine(amp, sr, dur, freq)\n",
-        "  s_all += s\n",
+        "for freq in range(F0, Fend+1, F0):      # 100부터 5000까지 100만큼 증가시키면서 해라. 즉 100,200,300,...5000\n",
+        "  s, t, theta = phasor_sine(amp, sr, dur, freq)        #다른 건 다 똑같고 freq만 달라지면서 들어감\n",
+        "  s_all += s                                           # s_all = s_all + s\n",
         "\n",
         "fig = plt.figure()\n",
         "ax = fig.add_subplot(111)\n",
@@ -528,7 +528,7 @@
         "ax.set_xlabel('time (msec)')\n",
         "ipd.Audio(s_all, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 88
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -563,6 +563,17 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dJVIXwtxRm9"
+      },
+      "source": [
+        "이 위까지가 source를 만든 것, purse train = harmonics = source\n",
+        "\n",
+        "이 밑에는 Filter를 만들 것!!"
       ]
     },
     {
@@ -584,6 +595,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8MihSstGyoFJ"
+      },
+      "source": [
+        "BW ; Band Width ... BW가 크면 산맥이 뚱뚱해지고, BW가 작으면 뾰족한 산맥이 됨"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gUgPXkj1WcU7"
@@ -600,9 +620,9 @@
         "    a1 = -2*np.sqrt(a2)*np.cos(omega)\n",
         "    a = np.array([1, a1, a2])\n",
         "    b = np.array([sum(a)])\n",
-        "    return a, b"
+        "    return a, b                        #함수를 그냥 쓸거임. 따로 공부 안 해도 됨."
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -613,7 +633,7 @@
       "source": [
         "s = s_all"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -622,18 +642,18 @@
         "id": "5McH6M_IWcU7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "10c7f53f-77e9-4366-cd38-c847c9ebc9bd"
+        "outputId": "a123e139-84f2-4c24-a1e7-57ae0274e916"
       },
       "source": [
-        "RG = 0  # RG is the frequency of the Glottal Resonator\n",
-        "BWG = 100  # BWG is the bandwidth of the Glottal Resonator\n",
+        "RG = 0  # RG is the frequency of the Glottal Resonator 산맥의 위치을 0Hz에 놓음. 왜냐면 원래 똑같은 높이였던 purse train을 점점 산맥이 낮아지게 하기 위해서.\n",
+        "BWG = 100  # BWG is the bandwidth of the Glottal Resonator 그 산맥의 band width 얼만큼 더 뾰쪽하게 할지\n",
         "a, b=resonance(sr,RG,BWG)\n",
         "s = lfilter(b, a, s, axis=0)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +673,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 105
+          "execution_count": 12
         }
       ]
     },
@@ -664,9 +684,9 @@
         "id": "nFn7VoCCWcU7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "deda71b1-1b3d-4a8f-ae66-379bd8b35371"
+        "outputId": "6ffaffcd-7938-4b6a-d63a-9d641a89b036"
       },
       "source": [
         "RG = 750  # RG is the frequency of the 1st Formant\n",
@@ -675,7 +695,7 @@
         "s = lfilter(b, a, s, axis=0)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,7 +715,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 106
+          "execution_count": 13
         }
       ]
     },
@@ -705,9 +725,9 @@
         "id": "SF8Y9c9YWcU8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "bc73b003-c060-460c-f179-d6cadedb6f30"
+        "outputId": "d6e461d2-6233-4a68-cf47-bbef9c4cd85e"
       },
       "source": [
         "RG = 1187  # RG is the frequency of the 2nd Formant\n",
@@ -716,7 +736,7 @@
         "s = lfilter(b, a, s, axis=0)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +756,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 14
         }
       ]
     },
@@ -746,9 +766,9 @@
         "id": "V7MYhBPCWcU8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "2ca12613-9298-43c6-83a6-63827142ddb8"
+        "outputId": "e053c688-7614-42db-af1d-5c1f0b1fb0c9"
       },
       "source": [
         "RG = 2595  # RG is the frequency of the 3rd Formant\n",
@@ -757,7 +777,7 @@
         "s = lfilter(b, a, s, axis=0)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +797,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 15
         }
       ]
     },
@@ -787,9 +807,9 @@
         "id": "87RfBvCPWcU8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "f77c2f8f-431f-48e3-f1c2-101a744e5baa"
+        "outputId": "3b8e1e1f-c00a-4a26-be7f-f213141d50c1"
       },
       "source": [
         "RG = 3781  # RG is the frequency of the 4th Formant\n",
@@ -798,7 +818,7 @@
         "s = lfilter(b, a, s, axis=0)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -818,7 +838,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 16
         }
       ]
     },
@@ -829,15 +849,15 @@
         "id": "utIwJCGmWcU9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
-        "outputId": "82af5fb2-3983-4fa4-b3f7-1bcc812f5772"
+        "outputId": "747e2427-c47c-4414-a267-8184d3c602d4"
       },
       "source": [
         "s = lfilter(np.array([1, -1]), np.array([1]), s)\n",
         "ipd.Audio(s, rate=sr)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,8 +877,26 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 110
+          "execution_count": 17
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YkJ6xKQm2WzH"
+      },
+      "source": [
+        "[1, -1] 하면 입술의 증폭 역할"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kF30V7cJ2r79"
+      },
+      "source": [
+        "여기까지 하면 모음을 만드는 원리를 모두 배운 것!"
       ]
     },
     {
