Colaboratory를 통해 생성됨

--- a/0526필기(sound).ipynb
+++ b/0526필기(sound).ipynb
@@ -983,8 +983,8 @@
         "from scipy.io import wavfile\n",
         "sr, s = wavfile.read(fn)\n",
         "nSamp = len(s)\n",
-        "dur = nSamp / sr\n",
-        "t = np.linspace(1/sr, dur, nSamp)"
+        "dur = nSamp / sr     ... sampling rate이 10000개인데 그 중에서 signal이 4370개 있음. 즉 1초 기준 10,000개이니까 여기서 duration은 4370/10000=0.437초가 됨\n",
+        "t = np.linspace(1/sr, dur, nSamp)   ... 1/10000부터 0.437초까지 4370등분 함."
       ],
       "execution_count": null,
       "outputs": []
@@ -1194,10 +1194,11 @@
         "                     #  길이는 0.437초(원래 signal과 똑같이). 최고주파는 sampling rate와 똑같이, 최저주파는 sampling rate를 512로 나눈 값과 똑같이 정함.\n",
         "freq = [];\n",
         "amp = [];\n",
-        "for n in range(1,nFFT+1):\n",
-        "    freq.append(sr*n/nFFT)\n",
-        "    c, t, theta = phasor_complex(1, sr, dur, freq[-1])\n",
-        "    amp.append(np.abs(np.dot(s,c)))"
+        "for n in range(1,nFFT+1):       #range를 1~512까지 만들어줌  , loop는 총 512번 돌게됨\n",
+        "    freq.append(sr*n/nFFT)      # 10000*1/512 ... 10000*512/512     -> 총 512개의 frequency가 만들어짐\n",
+        "    c, t, theta = phasor_complex(1, sr, dur, freq[-1])     #amp=1, sr은 방금 위에서 만든거, dur=0.437초, frequency=10000\n",
+        "    amp.append(np.abs(np.dot(s,c)))                        #abs은 절댓값, doc(s,c)는 둘을 dot product하라는 것\n",
+        "                                                           #c는 우리가 만든 complex phasor, s는 위에서 우리가 로드한 0,437초짜리 음성파일 실수"
       ],
       "execution_count": null,
       "outputs": []
